k8s/namespace.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: app-pfe
  labels:
    name: app-pfe
