k8s/authService.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: app-pfe

spec:
  replicas: 1
  revisionHistoryLimit: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: auth-service

  template:
    metadata:
      labels:
        app: auth-service

      annotations:
        # Monitoring
        prometheus.io/scrape: 'true'
        prometheus.io/port: '7070'
        prometheus.io/path: '/actuator/prometheus'

    spec:
      imagePullSecrets:
        - name: nexus-regcred
      containers:
        - name: auth-service
          image: 192.168.56.30/auth-service:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 7070

          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 7070
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 7070
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

---
apiVersion: v1
kind: Service

metadata:
  name: auth-service
  namespace: app-pfe

spec:
  type: NodePort

  selector:
    app: auth-service

  ports:
    - name: http
      port: 7070
      targetPort: 7070
      nodePort: 30707
