k8s/cloudPricerService.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-pricer-service
  namespace: app-pfe

spec:
  replicas: 1
  revisionHistoryLimit: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: cloud-pricer-service

  template:
    metadata:
      labels:
        app: cloud-pricer-service

      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8090'
        prometheus.io/path: '/actuator/prometheus'

    spec:
      imagePullSecrets:
        - name: nexus-regcred
      containers:
        - name: cloud-pricer-service
          image: 192.168.56.30/cloud-pricer:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8090

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

---
apiVersion: v1
kind: Service

metadata:
  name: cloud-pricer-service
  namespace: app-pfe

spec:
  type: NodePort

  selector:
    app: cloud-pricer-service

  ports:
    - name: http
      port: 8090
      targetPort: 8090
      nodePort: 30890
