k8s/deploymentService.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-service
  namespace: app-pfe

spec:
  replicas: 1
  revisionHistoryLimit: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: deployment-service

  template:
    metadata:
      labels:
        app: deployment-service

      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8082'
        prometheus.io/path: '/actuator/prometheus'

    spec:
      imagePullSecrets:
        - name: nexus-regcred
      containers:
        - name: deployment-service
          image: 192.168.56.30/deployment-service:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8082

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              memory: '256Mi'
              cpu: '200m'
            limits:
              memory: '512Mi'
              cpu: '500m'

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

---
apiVersion: v1
kind: Service

metadata:
  name: deployment-service
  namespace: app-pfe

spec:
  type: NodePort

  selector:
    app: deployment-service

  ports:
    - name: http
      port: 8082
      targetPort: 8082
      nodePort: 30811
