k8s/gatewayService.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: app-pfe

spec:
  replicas: 1
  revisionHistoryLimit: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: gateway

  template:
    metadata:
      labels:
        app: gateway

      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '6060'
        prometheus.io/path: '/actuator/prometheus'

    spec:
      imagePullSecrets:
        - name: nexus-regcred
      containers:
        - name: gateway
          image: 192.168.56.30/gateway:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 6060

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 6060
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              memory: '512Mi'
              cpu: '300m'
            limits:
              memory: '1Gi'
              cpu: '1'

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 6060
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

---
apiVersion: v1
kind: Service

metadata:
  name: gateway
  namespace: app-pfe

spec:
  type: NodePort

  selector:
    app: gateway

  ports:
    - name: http
      port: 6060
      targetPort: 6060
      nodePort: 30060
